manifests/postgress.yaml
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: voting-app
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        app: voting-app
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
      tolerations:
      - key: "private"
        operator: "Equal"
        value: "true"
 

---


apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
    app: voting-app
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres-pod
    app: voting-app
