manifests/redis.yaml
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    name: redis-deploy
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: voting-app
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: voting-app
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
      tolerations:
      - key: "private"
        operator: "Equal"
        value: "true"
        

---


apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis-service
    app: voting-app
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-pod
    app: voting-app
