manifests/result-app.yaml
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  labels:
    name: result-app-deploy
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: result-app-pod
      app: voting-app
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
        app: voting-app
    spec:
      containers:
      - name: result-app
        image: anshu049/result-app
        ports:
        - containerPort: 80


---


apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    name: result-service
    app: voting-app
spec:
  selector:
    name: result-app-pod
    app: voting-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
