manifests/voting-app.yaml
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deploy
  labels:
    name: voting-app-deploy
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: voting-app-pod
      app: voting-app
  template:
    metadata:
      name: voting-app-pod
      labels:
        name: voting-app-pod
        app: voting-app
    spec:
      containers:
      - name: voting-app
        image: anshu049/voting-app
        ports:
        - containerPort: 80
      affinity:  
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: public
                operator: In
                values:
                - true  

       
---


apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: voting-app
spec:
  selector:
    name: voting-app-pod
    app: voting-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
