manifests/result-app-networkpolicy.yaml
---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: result-app
spec:
  podSelector:
    matchLabels:
      app: result-app-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres-pod
    ports:
    - protocol: TCP
      port: 5432
