manifests/voting-app-networkpolicy.yaml
---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: voting-app
spec:
  podSelector:
    matchLabels:
      app: voting-app-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis-pod
    ports:
    - protocol: TCP
      port: 6379
